src/test/deca/context/valid/oracle/type_unary_op_3.deca
{
    boolean a;
    boolean b = !a;
    !b;
    /* Test that b is a boolean */
}