src/test/deca/context/invalid/ext/TAB_access4.deca
{
    boolean a = true;
    a[0];
}